[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["wasm-bindgen", "color"] }
image = "0.25.5"
itertools = "0.13.0"
js-sys = "0.3.74"
log = "0.4.22"
wasm-bindgen = "0.2.97"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
